fix: changed repo and service methods for counting total cost of subscriptions
